# lexicon

./: .gitignore  LICENSE  lexicon.yaml  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml
docs/: INSTALL.md  README.md
docs/Project/: MODULE.md  PROJECT.md  README.md  SUBPROJECTS.md
src/: ${name}_tb.v.lexicon_qs  .gitignore  .lexicon_sub.yaml.bkp  __init__.py  author.py  lexicon.yaml  lexicon_sub.yaml.bkl  makegenerators.py  module.py  not_mod.v  not_tb.v  project.py  subproject.py
src/a01q01/: .lexicon_sub.yaml.bkp  Makefile  not_mod.v  not_tb.v
src/backups/: Makefile_2021-02-06T13:45:16.736131.bkp  Makefile_2021-02-06T13:52:11.448050.bkp  Makefile_2021-02-06T13:53:19.952159.bkp  Makefile_2021-02-06T21:57:47.816870.bkp  Makefile_2021-02-07T03:34:02.055397.bkp
src/lexicon/: ${name}_mod.v.lexicon_qs  __init__.py  __main__.py  author.py  commonutils.py  filegenerators.py  main.py  main.py.bkp  makegenerators.py  module.py  project.py  subproject.py
